Remove localhost from editing page.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -116,7 +116,7 @@
 
         $.ajax({
             type: 'GET',
-            url: 'http://localhost:8080/api/24/me.json',
+            url: '../api/24/me.json',
             data: {fields: 'userCredentials'},
             dataType: 'json',
             username: 'admin',
