To find the problem of username crash.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -156,6 +156,7 @@
 <form id="updateUserForm" action="updateUser.action" method="post" class="inputForm">
     <input type="hidden" id="ouwtSelected" name="ouwtSelected" value=""/>
 
+
     <div><input type="hidden" id="id" name="id" value="$userCredentials.id"/></div>
     <table>
         <col style="width: 120px"/>
@@ -190,7 +191,7 @@
         </tr>
 
         <tr>
-            <td><label for="firstName">$i18n.getString( "first_name" ) <em title="$i18n.getString( 'required' )" class="required">*</em></label></td>
+            <td><label for="firstName">$i18n.getString( "first_name" ) <em title="required" class="required">*</em></label></td>
             <td colspan="3"><input type="text" id="firstName" name="firstName" value="$userCredentials.userInfo.firstName"></td>
         </tr>
 
