--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -160,6 +160,10 @@
     <p>$userCredentials.userInfo.surname</p>
     <p>$userCredentials.userInfo.firstName</p>
 
+
+    <label for="surname">$i18n.getString( "surname" )
+        <em title="$i18n.getString( 'required' )" class="required">*</em>
+    </label>
     <input type="text" id="surname" name="surname" value="$userCredentials.userInfo.surname">
     <input type="text" id="firstName" name="firstName" value="$userCredentials.userInfo.firstName">
 
@@ -192,7 +196,11 @@
         </tr>
 
         <tr>
-            <td><label for="surname">$i18n.getString( "surname" ) <em title="$i18n.getString( 'required' )" class="required">*</em></label></td>
+            <td>
+                <label for="surname">$i18n.getString( "surname" )
+                    <em title="$i18n.getString( 'required' )" class="required">*</em>
+                </label>
+            </td>
             <td colspan="3"><input type="text" id="surname" name="surname" value="$userCredentials.userInfo.surname"></td>
         </tr>
 
