--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -162,7 +162,7 @@
 
 
     <label for="surname">$i18n.getString( "surname" )
-        <em title="$i18n.getString( 'required' )" class="required">*</em>
+        <em class="required">*</em>
     </label>
     <input type="text" id="surname" name="surname" value="$userCredentials.userInfo.surname">
     <input type="text" id="firstName" name="firstName" value="$userCredentials.userInfo.firstName">
