--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -171,7 +171,6 @@
     <table>
         <col style="width: 120px"/>
         <col style="width: 350px"/>
-        <col/>
         <col style="width: 350px"/>
 
         <tr>
@@ -200,7 +199,7 @@
                 <label for="surname">Surname
                 <em title="required" class="required">*</em>
                 </label>
-                <td colspan="3"><input type="text" id="surname" name="surname" value="$userCredentials.userInfo.surname"></td>
+                <td colspan="3"><input type="text" id="surname" name="surname" value="surname"></td>
             </td>
         </tr>
 
