--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/exception.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/exception.vm
@@ -1,7 +1,9 @@
 #set( $idCount = 0 )
 
 #macro( printException $exception $preText )
+  #set($showStackTrace = true)
   <h5>
+
     #if( $showStackTrace )
       <span id="toggle$idCount" class="toggle"><a href="javascript:toggle( $idCount )">[+]</a></span>
     #end
@@ -60,6 +62,7 @@
   }
   </style>
   <script type="text/javascript">
+      console.log('expception:', $exception);
 
   function toggle( idCount )
   {
@@ -92,9 +95,9 @@
 <p>$encoder.htmlEncode( $i18n.getString( "exception_explanation_text" ))</p>
 <p><input type="button" value="$encoder.htmlEncode( $i18n.getString( "go_back" ))" onclick="history.go( -1 )"></p>
 
-#if( $runningAsPortal == "false" )
+
 #printException( $exception $i18n.getString( "exception" ) )
-#end
+
 
 </body>
 </html>
