--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -262,17 +262,21 @@
         </tr>
 
 
-        <tr id="needShowInSuperuser">
+        <tr #if (!$currentUser.isSuper()) style="display: none" #end>
             <td><label for="urSelected">$i18n.getString("User Role")<em title="$i18n.getString( 'required' )"
                                                                         class="required">*</em></label></td>
             <td>
                 <select id="urSelected" name="urSelected" class="valid">
-                #foreach( $userRole in $allUserAuthorityGroups)
-                    #if ($userRole.uid == $userAuthorityGroups.get(0).uid)
+                    #if ($userAuthorityGroups.isEmpty())
                         <option id="$userRole.name" value="$userRole.uid" selected="selected">$!encoder.htmlEncode( $userRole.name )</option>
                     #else
-                        <option id="$userRole.name" value="$userRole.uid">$!encoder.htmlEncode( $userRole.name )</option>
-                    #end
+                        #foreach( $userRole in $allUserAuthorityGroups)
+                            #if ($userRole.uid == $userAuthorityGroups.get(0).uid)
+                                <option id="$userRole.name" value="$userRole.uid" selected="selected">$!encoder.htmlEncode( $userRole.name )</option>
+                            #else
+                                <option id="$userRole.name" value="$userRole.uid">$!encoder.htmlEncode( $userRole.name )</option>
+                            #end
+                        #end
                     #end
                 </select>
             </td>
