[defect] change the default table row altenative background color

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/reporting-row/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/reporting-row/index.scss
@@ -48,6 +48,10 @@
   background: #DDDDDD;
 }
 
+.default:nth-child(even) {
+  background: #dfe6ec;
+}
+
 .primaryTitle, .secondaryTitle, .tertiaryTitle {
   font-size: 1rem;
   font-weight: bold;
