Show user role in list all user page correctly.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/allUser.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/allUser.vm
@@ -95,7 +95,11 @@
  					#if ($user.userCredentials.getUserAuthorityGroups().isEmpty())
                         <td>$encoder.htmlEncode("null")</td>
 					#else
-                        <td>$encoder.htmlEncode( $!user.userCredentials.getUserAuthorityGroups().get(0).name)</td>
+ 						<td>
+							#foreach ($role in $!user.userCredentials.getUserAuthorityGroups())
+    	                        $encoder.htmlEncode($role.name)
+							#end
+						</td>
 					#end
                 </tr>
 				#end
