--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/validationRule.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/validationRule.vm
@@ -46,7 +46,7 @@
   var i18n_compulsory_pair = '$i18n.getString( "compulsory_pair" )';
   var i18n_exclusive_pair = '$i18n.getString( "exclusive_pair" )';
 
-
+  var i18n_default_rule = '$i18n.getString("default")';
   var i18n_customed_validation_rule_Sarampo = '$i18n.getString("customed_validation_rule_Sarampo")';
 
   var i18n_customed_validaiton_rule_Meningite = '$i18n.getString("customed_validaiton_rule_Meningite")';
