Add user role in user.vm.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/user.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/user.vm
@@ -48,6 +48,15 @@
 				    data-can-delete="#if( $currentUsername != $user.userCredentials.username )true#{else}false#end">
 				    <td>$encoder.htmlEncode( $!user.surname ), $encoder.htmlEncode( $!user.firstName )</td>
 				    <td>$encoder.htmlEncode( $!user.userCredentials.username )</td>
+					#if ($user.userCredentials.getUserAuthorityGroups().isEmpty())
+                        <td>$encoder.htmlEncode("null")</td>
+					#else
+                        <td>
+							#foreach ($role in $!user.userCredentials.getUserAuthorityGroups())
+    	                        $encoder.htmlEncode($role.name)
+							#end
+                        </td>
+					#end
 				</tr>
 				#end
 				</tbody>
