Fix the defect for update user response page.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/user.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/user.vm
@@ -38,6 +38,7 @@
 				<tr>
 					<th>$i18n.getString( "name" )</th>
 					<th>$i18n.getString( "username" )</th>
+          <th>$i18n.getString("user_role")</th>
 				</tr>
 				</thead>
 				<tbody id="list">
