Add comments column in ops indicator page.

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/ops-reporting/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/ops-reporting/index.scss
@@ -130,6 +130,14 @@
   text-align: left;
 }
 
+.comments {
+    padding: 0 .18rem;
+    min-width: 6.25rem;
+    max-width: 7rem;
+    white-space: normal;
+    text-align: left;
+}
+
 .mark {
   font-weight: bold;
 }
